Case No: 26587 - Heated Self Storage - Small Formatting Issue on Mobile Layout

--- a/heated/src/app/api-bundle/pay-rent-form/pay-rent-form.component.scss
+++ b/heated/src/app/api-bundle/pay-rent-form/pay-rent-form.component.scss
@@ -22,10 +22,10 @@ table {
   overflow-x: auto;
 }
 
-.modal-position {
-  position: absolute;
-  left: 280px;
-}
+// .modal-position {
+//   position: absolute;
+//   left: 280px;
+// }
 
 .modal {
   td {
